--- a/index.html
+++ b/index.html
@@ -14,12 +14,34 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body> 
     <div class="main-container">
-        <header></header>
+        <header>
+            <div class="header-container">
+            <img src="./images/logo/Booki.png"><br>
+            <a href="#Hébergement à Marseilles" class="Lienhebergement">Hébergement</a>
+            <a href="#Activité à Marseilles" class="Activités">Activités</a><br>
+        </div>
+            <p class="section-title">Trouvez votre hébergement pour des vacances de rêve</p>
+            <p>En plein centre-ville ou en pleine nature </p>
+</header>
+<nav>
+    <form method="get" action="">
+        <input type="text" type="search" id="site-search" name="s">
+        <button>Rechercher</button><br>
+        <p class="section-title"> Filtres </p>
+<div class="filtres-container">
+    <div class="Filtre1 box">Économique</div>
+    <div class="Filtre2 box">Familial</div>
+    <div class="Filtre3 box">Romantique</div>
+    <div class="Filtre4 box">Nos pépites</div>
+</div>
+    </form>
+</nav>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
+                    <h2 class="section-title" id="Hébergement à Marseilles">Hébergement à Marseilles</h2>
 
                 </section>
                 <section class="populaires">
