Finition Navigation Mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </header>
         <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
-        <p>En plein centre-ville ou en pleine nature </p>
+        <p class="text-header">En plein centre-ville ou en pleine nature </p>
     <!--
             <div class="search-container">
                 <div class="location-container">
@@ -60,6 +60,7 @@
 
         </div>
     -->
+         <div class="recherche-bloc">
         <div class="recherche-container">
             <div class="location-container">
                 <i class="fa-sharp fa-solid fa-location-dot fa-flip-horizontal icon"></i>
@@ -70,6 +71,8 @@
                 <i class="fa-solid fa-magnifying-glass icon"></i>
             </div>
         </div>
+    </div>
+    
 
 
            <!-- <h2 class="filtre-title"> Filtres </h2>-->
@@ -107,7 +110,7 @@
                 -->
                 
                 <div class="circle">
-                    <i class="fa-solid fa-info" style="color: #74C0FC;"></i>
+                    <i class="fa-solid fa-info" style="color: ##0065fc;"></i>
                                 </div>
                                 <span>Plus de 500 logements sont
                                     disponibles dans cette
